use "q" for toggling laser pointer, use fira code for monospace font

--- a/talks/base/base.jinja2
+++ b/talks/base/base.jinja2
@@ -84,7 +84,7 @@
       function initModule () {
         Object.assign(tail.style, initial_css)
         body.appendChild(tail)
-        Reveal.addKeyBinding( { keyCode: 84, key: 'T', description: 'toggle laser' }, () => {
+        Reveal.addKeyBinding( { keyCode: 81, key: 'Q', description: 'toggle laser' }, () => {
           laserActive = !laserActive
           toggleLaser()
         } )
