--- a/talks/talks/2024_03-athlete-tidalsim_error_analysis.jinja2
+++ b/talks/talks/2024_03-athlete-tidalsim_error_analysis.jinja2
@@ -256,6 +256,8 @@ import 'reveal.js/plugin/highlight/monokai.css'
   <section>
     <h2>Warmup Oracles</h2>
 
+    <img class="fragment" src="./figs/dynamic/tidalsim-error/functional_warmup.svg" width="100%" />
+
     <ul>
       <li class="fragment">We can do 'perfect' functional warmup by using RTL simulation waveforms from the full run</li>
       <li class="fragment">We can measure the impact of the warmup model vs the warmup oracle</li>
