--- a/talks/talks/demo.jinja2
+++ b/talks/talks/demo.jinja2
@@ -17,12 +17,12 @@
 {% endblock %}
 
 {% block theme %}
-import '/themes/black.scss'
-import 'reveal.js/plugin/highlight/monokai.css'
+import '/themes/tokyonight-night.scss'
+import 'highlight.js/styles/tokyo-night-dark.css'
 {% endblock %}
 
 {% block slides %}
-<section>
+<section class="center">
   <a href="https://revealjs.com">
     <img src="https://static.slid.es/reveal/logo-v1/reveal-white-text.svg" alt="reveal.js logo" style="height: 180px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
   </a>
@@ -41,7 +41,7 @@ import 'reveal.js/plugin/highlight/monokai.css'
 
 <!-- Example of nested vertical slides -->
 <section>
-  <section>
+  <section class="center">
     <h2>Vertical Slides</h2>
     <p>Slides can be nested inside of each other.</p>
     <p>Use the <em>Space</em> key to navigate through all slides.</p>
@@ -50,11 +50,11 @@ import 'reveal.js/plugin/highlight/monokai.css'
       <img class="r-frame" style="background: rgba(255,255,255,0.1);" width="178" height="238" data-src="https://static.slid.es/reveal/arrow.png" alt="Down arrow">
     </a>
   </section>
-  <section>
+  <section class="center">
     <h2>Basement Level 1</h2>
     <p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
   </section>
-  <section>
+  <section class="center">
     <h2>Basement Level 2</h2>
     <p>That's it, time to go back up.</p>
     <br>
@@ -140,7 +140,7 @@ import 'reveal.js/plugin/highlight/monokai.css'
   </p>
 </section>
 
-<section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
+<section class="center" data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
   <h2>Auto-Animate</h2>
   <p>Automatically animate matching elements across slides with <a href="https://revealjs.com/auto-animate/">Auto-Animate</a>.</p>
   <div class="r-hstack justify-center">
@@ -149,7 +149,7 @@ import 'reveal.js/plugin/highlight/monokai.css'
     <div data-id="box3" style="background: #999; width: 50px; height: 50px; margin: 10px; border-radius: 5px;"></div>
   </div>
 </section>
-<section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
+<section class="center" data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
   <div class="r-hstack justify-center">
     <div data-id="box1" data-auto-animate-delay="0" style="background: cyan; width: 150px; height: 100px; margin: 10px;"></div>
     <div data-id="box2" data-auto-animate-delay="0.1" style="background: magenta; width: 150px; height: 100px; margin: 10px;"></div>
@@ -157,7 +157,7 @@ import 'reveal.js/plugin/highlight/monokai.css'
   </div>
   <h2 style="margin-top: 20px;">Auto-Animate</h2>
 </section>
-<section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
+<section class="center" data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
   <div class="r-stack">
     <div data-id="box1" style="background: cyan; width: 300px; height: 300px; border-radius: 200px;"></div>
     <div data-id="box2" style="background: magenta; width: 200px; height: 200px; border-radius: 200px;"></div>
@@ -257,11 +257,11 @@ import 'reveal.js/plugin/highlight/monokai.css'
   </p>
 </section>
 
-<section>
-  <section data-background="#dddddd">
+<section class="center">
+  <section data-background="#000000">
     <h2>Slide Backgrounds</h2>
     <p>
-      Set <code>data-background="#dddddd"</code> on a slide to change the background color. All CSS color formats are supported.
+      Set <code>data-background="#"</code> on a slide to change the background color. All CSS color formats are supported.
     </p>
     <a href="#" class="navigate-down">
       <img class="r-frame" style="background: rgba(255,255,255,0.1);" width="178" height="238" data-src="https://static.slid.es/reveal/arrow.png" alt="Down arrow">
@@ -392,7 +392,7 @@ import 'reveal.js/plugin/highlight/monokai.css'
   </aside>
 </section>
 
-<section>
+<section class="center">
   <h2>Export to PDF</h2>
   <p>Presentations can be <a href="https://revealjs.com/pdf-export/">exported to PDF</a>, here's an example:</p>
   <iframe data-src="https://www.slideshare.net/slideshow/embed_code/42840540" width="445" height="355" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:3px solid #666; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
