--- a/talks/themes/tokyonight-night.scss
+++ b/talks/themes/tokyonight-night.scss
@@ -161,3 +161,7 @@ $overlayElementFgColor: 0, 0, 0;
 .bg-yellow {
   background: $tn_yellow;
 }
+
+.laser-pointer {
+  background: color.adjust($tn_red, $alpha: -0.3) !important;
+}
