--- a/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
+++ b/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
@@ -57,7 +57,7 @@ import 'highlight.js/styles/tokyo-night-dark.css'
 - Now comes the vision, we want to split it into a few sections
     - The frontend design language + the new design/verification/modeling methodology
         - Incremental-first
-        - Mixed-abstraction for both design and modeling
+        - Mixed-abstraction for both design and modeling (consider that each hardware domain is suitable for a different abstraction. But, even within a hardware domain, there are specific )
         - Leveraging host-language type system for ...
     - The IR + the new simulation backends/synthesis backends that it enables to support the above methodology
         - Take inspiration from LNAST (graph native in-memory representation) + FIRRTL (in terms of passes and FireSim) + Circt dialects (the closest we have to mixed-abstraction today, but they don't support interaction semantics)
@@ -68,14 +68,39 @@ import 'highlight.js/styles/tokyo-night-dark.css'
 -->
 
 {% block slides %}
-<section class="center">
-  <a href="https://revealjs.com">
-    <img src="./figs/logos/slice_logo.png" style="height: 180px; margin: 0 auto 4rem auto;">
-  </a>
-  <h3>A Chisel / Chipyard Demo</h3>
-  <h3 class="fragment">The Next Paradigm of Hardware and SoC Design</h3>
-  <p>
-    <small>Joonho Whangbo, Vighnesh Iyer, Bora Nikolic</small>
-  </p>
+<section>
+  <section class="center">
+    <a href="https://revealjs.com">
+      <img src="./figs/logos/BAR_vertical_logo.svg" style="height: 100px; margin: 0 auto 2rem auto; padding: 1rem; border-radius: 0.5rem;" class="bg-white">
+      <img src="./figs/logos/chipyard_logo.svg" style="height: 100px; margin: 0 auto 2rem auto; padding: 1rem; border-radius: 0.5rem;" class="bg-white">
+      <!--<img src="./figs/logos/chisel_logo.svg" style="height: 50px; margin: 0 auto 2rem auto; padding: 1rem; border-radius: 0.5rem;" class="bg-white">-->
+    </a>
+    <h2 class="fragment">The Next Paradigm of Hardware and SoC Design</h2>
+    <h3>Chisel / Chipyard Overview + Demo</h3>
+    <h4 style="font-weight:normal;">
+      Joonho Whangbo, Vighnesh Iyer, Bora Nikolic (UC Berkeley)
+    </h4>
+    <h5 style="font-weight:normal;">
+      LATTE 2024
+    </h5>
+  </section>
+  <section>
+    <h2>Talk Overview</h2>
+    <ol>
+      <li class="fragment">The existing paradigm of hardware design and verification we see in industry</li>
+      <li class="fragment">
+      <li class="fragment">Recent efforts 
+    </ol>
+  </section>
+</section>
+
+<section>
+  <section class="center">
+    <h2>The Current Paradigm of Hardware Design</h2>
+  </section>
+
+  <section>
+    <h2>
+  </section>
 </section>
 {% endblock %}
